# cpp-sdl-project-init

./: .gitignore  CMakeLists.txt  main.cpp
